--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.8",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "daisyui": "^2.38.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
